
| 🎁
| kn version command shows supported Serving and API versions
| https://github.com/knative/client/pull/370[#370]

| 🎁
| Print NAMESPACE column as the first column when --all-namespaces is specified
| https://github.com/knative/client/pull/366[#366]

| 🎁
| Add documentation for traffic splitting and tagging targets
| https://github.com/knative/client/pull/331[#331]

|===

## v0.2.0 (2019-07-10)

[cols="1,10,3", options="header", width="100%"]
|===
| | Description | PR

| 🐛
| Show URL instead of address when listing services
| https://github.com/knative/client/pull/247[#247]

| 🎁
| Add `kn service list <svc-name>` and `kn revision list <rev-name>`
| https://github.com/knative/client/pull/150[#150]

| 🐛
| Dynamically set GroupVersionKind via schema lookup
| https://github.com/knative/client/pull/134[#134]

| 🧽
| Introduce a `KnClient` interface
| https://github.com/knative/client/pull/134[#134]

| 🐛
| Retry update operation on an optimistic lock failure
| https://github.com/knative/client/pull/240[#240]

| 🎁
| Add `kn route list`
| https://github.com/knative/client/pull/202[#202]

| 🧽
| Improved error message when no command is given
| https://github.com/knative/client/pull/218[#218]

| 🎁
| Add gotest.tools testing support
| https://github.com/knative/client/pull/218[#218]

| 🎁
| Add second test run against latest released Knative serving version
| https://github.com/knative/client/pull/170[#170]

| 🎁️
| Add `--port` to `kn service create` and `kn service update`
| https://github.com/knative/client/pull/191[#191]

| 🎁
| Add `kn revision delete`
| https://github.com/knative/client/pull/207[#207]

| 🎁
| Add goimport to `build.sh`
| https://github.com/knative/client/pull/186[#186]

| 🧽
| Wait for service to become ready with `kn service create`
| https://github.com/knative/client/pull/156[#156]

| 🎁
| Add shell based smoke tests
| https://github.com/knative/client/pull/183[#183]

| 🧽
| Use current namespace from `.kube/config` as default